# SentinelAI

./: .env.example  .gitignore  README.md  README_ja.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8f8ef1ef7c7b_create_users_table.py  e8b2fcf5c4c5_initialize_migration_foundation.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  health.py
backend/app/core/: config.py  logging.py  security.py  tokens.py
backend/app/db/: base.py  dependencies.py  engine.py  session.py
backend/app/models/: user.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: health.py  user.py
backend/app/services/: exceptions.py  login_service.py  registration_service.py
backend/tests/: conftest.py  test_config.py  test_database.py  test_health.py  test_login.py  test_registration.py  test_security.py  test_tokens.py
docs/en/: 01_Project_Overview.md  02_Requirements.md  03_Development_Roadmap.md  04_Basic_Design.md  05_Database_Design.md  06_API_Design.md  07_Screen_Design.md  08_Setup_Guide.md  12_Authentication_Flow.md
docs/en/adr/: ADR-001_Authentication_Token_Transport.md  ADR-002_Database_Access_and_Migrations.md  ADR-003_API_Conventions.md  ADR-004_Frontend_Form_and_State_Design.md
frontend/: .dockerignore  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/app/providers/: AppProviders.tsx
frontend/src/app/router/: AppRouter.tsx
frontend/src/components/layout/: AppLayout.tsx  AuthLayout.tsx
frontend/src/features/auth/api/: auth-api.ts
frontend/src/features/auth/schemas/: login-schema.ts  register-schema.ts
frontend/src/features/auth/types/: auth.ts
frontend/src/lib/: api-client.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx
